Various style corrections
Increase specificity of previous and next classes in slideshow
Add entry navigation button styles
Fix with overflows on single column template

--- a/assets/sass/6components/frontpage/_feature-section.scss
+++ b/assets/sass/6components/frontpage/_feature-section.scss
@@ -1,7 +1,6 @@
 // Featured section
 // ---------------
 
-.featured-section {
   .featured-section-title {
     @include font-size(20);
     @include title-font;
@@ -10,4 +9,3 @@
     padding-bottom: 5px;
     text-transform: uppercase;
   }
-}
