--- a/assets/sass/6components/page-level/_content-container.scss
+++ b/assets/sass/6components/page-level/_content-container.scss
@@ -4,9 +4,6 @@
 @include breakpoint('small') {
   .content-container {
     grid-area: content;
-  }
-
-  .page-template-pagetpl-onecolumn .content-container {
-    grid-area: initial;
+    min-width: 0;
   }
 }
